# picodata

./:    .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci-asan.yml  .gitlab-ci.yml  .gitleaks.toml  .gitleaksignore  .gitmodules  .justfile  .luacheckrc  .pre-commit-config.yaml  .tool-versions  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Pipfile  README.md  RELEASE_NOTES.md  build.rs  cliff.toml  clippy.toml  deny.toml  exports_picodata  filter_plugin_records.py  mkdocs.yml  phpize.sh  poetry.toml  pyproject.toml  pytest.ini  requirements.txt  system_tables.spec
benchmark/perf/: Cargo.toml
benchmark/perf/benches/: perf.rs
gostech/gostech-audit-log/: Cargo.toml  README.md  key.pem  metamodel_0.1.0.json
gostech/gostech-audit-log/src/: main.rs
gostech/gostech-audit-log/test/: client.cert.pem  client.key.pem  server.cert.pem
gostech/gostech-metrics/: Cargo.toml  README.md
gostech/gostech-metrics/src/: main.rs
pgproto/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Cargo.toml  Dockerfile.ci  Pipfile  README.md  pytest.ini  test-requirements.txt
pgproto/cmake/: FindMsgPuck.cmake
pgproto/examples/: demo.lua  magic.sh
pgproto/src/: CMakeLists.txt  auth.rs  client.rs  entrypoints.rs  error.rs  helpers.rs  lib.rs  messages.rs  server.rs  sql.rs  storage.rs  stream.rs  tls.rs
pgproto/src/client/: auth.rs  extended_query.rs  simple_query.rs  startup.rs
pgproto/src/postgres/: CMakeLists.txt  attributes.c  attributes.h  auth.c  auth.h  messages.c  messages.h  port.c  port.h  postgres.c  postgres.h  report.c  report.h  startup.c  startup.h
pgproto/src/server/: CMakeLists.txt  server.c  server.h
pgproto/src/sql/: describe.rs  handle.rs  portal.rs  statement.rs  types.rs  value.rs
pgproto/src/storage/: describe.rs  result.rs  value.rs
pgproto/src/tarantool/: CMakeLists.txt
pgproto/test/: CMakeLists.txt  auth_test.py  conftest.py  extended_query_test.py  simple_query_test.py  ssl_test.py
pgproto/test/pgdata/: gen_certs.sh  root.crt  server.crt  server.csr
picodata-plugin/: Cargo.toml  README.md
picodata-plugin-proc-macro/: Cargo.toml
picodata-plugin-proc-macro/src/: internal.rs  lib.rs
picodata-plugin/src/: authentication.rs  background.rs  error_code.rs  lib.rs  metrics.rs  util.rs
picodata-plugin/src/internal/: cas.rs  ffi.rs  mod.rs  types.rs
picodata-plugin/src/interplay/: mod.rs
picodata-plugin/src/log/: mod.rs
picodata-plugin/src/plugin/: interface.rs  mod.rs  prelude.rs
picodata-plugin/src/sql/: mod.rs  types.rs
picodata-plugin/src/transport/: context.rs  listener.rs  mod.rs  rpc.rs  stream.rs
picoplugin/: Cargo.toml
picoplugin/src/: background.rs  error_code.rs  interface.rs  lib.rs  metrics.rs  prelude.rs  util.rs
picoplugin/src/background/: mod.rs
picoplugin/src/internal/: ffi.rs  mod.rs  types.rs
picoplugin/src/interplay/: mod.rs
picoplugin/src/log/: mod.rs
picoplugin/src/plugin/: interface.rs  prelude.rs
picoplugin/src/sql/: mod.rs  types.rs
picoplugin/src/system/: mod.rs
picoplugin/src/transport/: context.rs  mod.rs  rpc.rs
picoplugin_gen/: Cargo.toml
picoplugin_gen/src/: lib.rs
sbroad/: Cargo.toml  Makefile
sbroad/.cargo/: config.toml
sbroad/doc/sql/: query.ebnf
sbroad/sbroad-benches/: Cargo.toml
sbroad/sbroad-benches/benches/: cbo.rs  parse.rs
sbroad/sbroad-cartridge/: Cargo.toml  Makefile  sbroad-scm-1.rockspec
sbroad/sbroad-core/: Cargo.toml
sbroad/sbroad-core/src/: builtins.lua  core-router.lua  core.lua  errors.rs  executor.rs  frontend.rs  helper.lua  ir.rs  lib.rs  utils.rs
sbroad/sbroad-type-system/: Cargo.toml
sbroad/sbroad-type-system/benches/: benchmark.rs
sbroad/sbroad-type-system/src/: error.rs  expr.rs  lib.rs  type_system.rs
sql-benches/: Cargo.toml
sql-benches/benches/: parse.rs
sql-dynfilter/: Cargo.toml
sql-dynfilter/benches/: dynfilter.rs
sql-dynfilter/src/: error.rs  fuse.rs  hasher.rs  lib.rs  smallset.rs
sql-executor/: Cargo.toml
sql-executor/src/: executor.rs  lib.rs  test_helpers.rs
sql-executor/src/executor/: bucket_discovery.rs  buckets_info.rs  engine.rs  hash.rs  ir.rs  preemption.rs  result.rs  tests.rs  vdbe.rs  vtable.rs
sql-frontend/: Cargo.toml
sql-frontend/src/: lib.rs
sql-frontend/src/frontend/: sql.rs
sql-ir/: Cargo.toml
sql-ir/src/: errors.rs  ir.rs  lib.rs  utils.rs
sql-ir/src/ir/: aggregates.rs  distribution.rs  explain.rs  expression.rs  function.rs  helpers.rs  index.rs  metadata.rs  node.rs  operator.rs  subtree_cloner.rs  test_fixtures.rs  tests.rs  transformation.rs  tree.rs  types.rs  value.rs
sql-planner/: Cargo.toml  Makefile
sql-planner/src/: builtins.lua  errors.rs  executor.rs  frontend.rs  helpers.rs  ir.rs  lib.rs  utils.rs
sql-planner/src/backend/: sql.rs
sql-planner/src/executor/: bucket.rs  bucket_discovery.rs  dynfilter.rs  engine.rs  ir.rs  lru.rs  preemption.rs  protocol.rs  result.rs  tests.rs  vdbe.rs  vtable.rs
sql-planner/src/frontend/: sql.rs
sql-planner/src/ir/: acl.rs  aggregates.rs  block.rs  bucket.rs  ddl.rs  distribution.rs  dynamic_filter_spec.rs  explain.rs  expression.rs  function.rs  helpers.rs  node.rs  operator.rs  options.rs  relation.rs  sharding_key.rs  transformation.rs  types.rs  undo.rs  value.rs
sql-planner/tests/planner_tests/: block_pattern.rs  distribution.rs  explain.rs  ir_helpers.rs  main.rs  plugin.rs  redistribution.rs  subtree_cloner.rs  transformation.rs
tarantool/tarantool-proc/: Cargo.toml
tarantool/tarantool-proc/src/: lib.rs  test.rs
test/plug_wrong_version/: Cargo.toml
test/plug_wrong_version/src/: lib.rs
test/testplug/: Cargo.toml  testplug.yaml  testplug_broken_manifest_1.yaml  testplug_broken_manifest_2.yaml  testplug_broken_manifest_3.yaml  testplug_small_svc2.yaml
test/testplug/src/: lib.rs
test/testplug/testplug_broken_manifest_2/: testplug_broken_manifest_2.yaml
test/testplug/testplug_broken_manifest_3/: manifest.yaml  testplug_broken_manifest_3.yaml
test/testplug/testplug_sdk/: manifest.yaml  migr.db
test/testplug/testplug_w_migration/: author.db  book.db
(+2584 files in other folders)
