[tool.poetry]
name = "picodata"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
black = "^24.10.0"
flake8 = "^7.1.1"
funcy = "^2.0"
msgpack = "^1.1.0"
mypy = "^1.13.0"
packaging = "^24.1"
pexpect = "^4.9.0"
pg8000 = "^1.31.2"
prettytable = "^3.12.0"
psycopg = { version = "^3.2.3", extras = ["binary"] }
pytest = "^8.3.3"
pytest-clarity = "^1.0.1"
pytest-repeat = "^0.9.3"
pytest-xdist = "^3.6.1"
pytest-harvest = "^1.10.5"
pyyaml = "^6.0.2"
requests = "^2.32.3"
tarantool = "^1.2.0"
types-pyyaml = "^6.0.12.20240917"
types-requests = "^2.32.0.20241016"
gitpython = "^3.1.43"
tqdm = "^4.67.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
