[package]
name = "pgproto"
version = "0.0.0"
edition = "2021"

[lib]
name = "pgproto"
crate-type = ["cdylib"]

[dependencies]
bytes = "1.4.0"
ctor = "0.2.4"
log = "0.4.20"
once_cell = "1.18.0"
pgwire = "0.16.0"
rand = "0.8.5"
rmp = "0.8.12"
rmp-serde = "1.0.0"
serde="1.0.183"
serde_json = "1.0.107"
serde_repr = "0.1.16"
tarantool = "1.1.0"
thiserror = "1.0.48"
