[package]
name = "picodata-plugin-proc-macro"
version = "25.1.2"
edition = "2021"
license-file = "./../LICENSE"
description = "Procedural macros for picodata-plugin crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
