[package]
name = "picodata-plugin-proc-macro"
version = "25.3.3"
edition = "2021"
license = "BSD-2-Clause"
description = "Procedural macros for picodata-plugin crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
