[package]
name = "picodata-plugin-proc-macro"
version = "25.6.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Procedural macros for picodata-plugin crate"
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
