[package]
name = "picodata-plugin"
version = "25.3.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Toolkit to build plugins for picodata.io DBMS"

[lib]
crate-type = ["lib"]

[dependencies]
abi_stable = "0.11"
gensym = "0.1"
log = "0.4"
picodata-plugin-proc-macro = { path = "../picodata-plugin-proc-macro", version = "25.3.0" }
rmp = "0.8"
rmp-serde = "1.1"
rmpv = { version = "1.0", features = ["with-serde"] }
serde = "1.0"
smol_str = "0.2"
tarantool = { path = "../tarantool/tarantool", version = "7.0", features = ["picodata", "test", "tokio_components"] }
tarolog = "0.2.1"
thiserror = "1.0"
tros = { version = "0.2.1", features = ["picodata"] }

[dev-dependencies]
reqwest = "0.12"
serde_json = "1.0"
threadpool = "1.8"

[features]
internal_test = []
