[package]
name = "picodata-plugin"
version = "26.1.1"
edition = "2021"
license = "BSD-2-Clause"
description = "Toolkit to build plugins for picodata.io DBMS"
repository.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
abi_stable = "0.11"
log = "0.4"
openssl = { workspace = true }
picodata-plugin-proc-macro = { path = "../picodata-plugin-proc-macro", version = "26.1.0" }
rmp = "0.8"
rmp-serde = "1.1"
rmpv = { version = "1.0", features = ["with-serde"] }
serde = "1.0"
smol_str = { workspace = true }
socket2 = { workspace = true }
tarantool = { path = "../tarantool/tarantool", version = "11.0", features = ["picodata", "test", "tokio_components"] }
thiserror = "2"

[dev-dependencies]
reqwest = "0.13"
serde_json = "1.0"
threadpool = "1.8"

[features]
internal_test = []
internal = []
