[package]
name = "picoplugin"
version = "0.1.0"
edition = "2021"
license-file = "./../LICENSE"

[lib]
crate-type = ["lib"]

[dependencies]
gensym = "0.1.0"
abi_stable = "0.11.2"
picoplugin_gen = { path = "../picoplugin_gen" }
serde = "1.0.197"
rmp = "0.8.11"
rmp-serde = "1.1"
thiserror = "1.0.61"
tarolog = "0.1.0"
log = "0.4.21"
rmpv = { version = "1.0.0", features = ["with-serde"] }
tros = { version = "0.1.3", features = ["picodata"] }

[dev-dependencies]
serde_json = "1.0.117"
threadpool = "1.8.1"
reqwest = "0.12"

[dependencies.tarantool]
path = "./../tarantool/tarantool"
version = "5.0"
features = ["picodata", "test", "tokio_components"]

[features]
internal_test = []
