[package]
name = "picoplugin_gen"
version = "0.1.0"
edition = "2021"
license-file = "./../LICENSE"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0", features = [ "full", "extra-traits" ] }
quote = "^1.0"
proc-macro2 = "^1.0"
tarantool = { git = "https://github.com/picodata/tarantool-module", rev = "dbebcc0" }
