[package]
name = "picoplugin_gen"
version = "0.1.0"
edition = "2021"
license-file = "./../LICENSE"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0", features = ["full", "extra-traits"] }
quote = "^1.0"
proc-macro2 = "^1.0"

[dependencies.tarantool]
path = "./../tarantool/tarantool"
version = "5.0"
features = ["picodata", "test"]

