[package]
name = "sql-benches"
version = "0.1.0"
rust-version = "1.85"
authors = ["Picodata"]
license-file = "../LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sql-core = { path = "../sql-planner", version = "0.1", features = ["mock"] }
pest = "2.0"
pest_derive = "2.0"
bincode = "1.3"
tarantool = { path = "../tarantool/tarantool", features = ["picodata"] }

[dev-dependencies]
clap = { version = "4", features = ["default"] }
criterion = "0.5.1"
rand = "0.8"
tarantool = { path = "../tarantool/tarantool", features = [
  "picodata",
  "standalone_decimal",
] }

[[bench]]
name = "parse"
harness = false

[features]
picodata = ["tarantool/picodata"]
standalone_decimal = ["tarantool/standalone_decimal"]
