[package]
name = "sql-frontend"
version = "0.1.0"
rust-version.workspace = true
authors = ["Picodata"]
license-file.workspace = true
edition.workspace = true

[dependencies]
ahash = { workspace = true }
chrono = { workspace = true }
itertools = "0.10"
lazy_static = "1.4"
pest = "2.0"
pest_derive = "2.0"
smol_str = { workspace = true }
sql-ir = { path = "../sql-ir" }
sql-type-system = { path = "../sql-type-system" }
sqlformat = "0.4"
tarantool = { workspace = true, features = ["extra_impls"] }
thiserror = { workspace = true }
time = { workspace = true, features = ["parsing", "formatting", "macros"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { workspace = true, features = ["yaml"] }
tarantool = { workspace = true, features = ["standalone_decimal", "extra_impls"] }
# Self-referential dev-dependency: forces the `mock` feature on for this
# crate's own tests and benches without affecting downstream builds.
sql-frontend = { path = ".", features = ["mock"] }
# The dev edge back to sql-executor is legal (cargo allows cycles that
# cross a dev-dependency) and pulls in the mock router and the shared
# SQL-parsing test helpers.
sql-executor = { path = "../sql-executor", features = ["mock"] }

[features]
mock = ["sql-ir/mock"]
