[package]
name = "sql-core"
version = "0.1.0"
rust-version = "1.85"
authors = ["Picodata"]
license-file = "../LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7"
base64ct = { version = "1.5", features = ["alloc"] }
bincode = "1.3"
blake3 = "1.3"
chrono = "0.4"
hash32 = "0.2"
itertools = "0.10"
lazy_static = "1.4"
lru = "0.16.0"
pest = "2.0"
pest_derive = "2.0"
rand = "0.8"
rmp = "0.8"
rmp-serde = "1.0"
rmpv = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_bytes = "0.11"
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
smol_str = { version = "0.2", features = ["serde"] }
time = { version = "0.3.37", features = ["parsing", "formatting", "macros"] }
twox-hash = "2.1"
sqlformat = "0.4"
comfy-table = "7.2.1"
regex = "1.11.3"
sql-type-system = { path = "../sql-type-system" }
tarantool = { path = "../tarantool/tarantool", features = ["picodata"] }

[dev-dependencies]
pretty_assertions = "1.3"
serde_yaml = "0.9.34"
insta = "1.42"
tarantool = { path = "../tarantool/tarantool", features = [
  "picodata",
  "standalone_decimal",
] }

[lib]
name = "sql"
crate-type = ["cdylib", "rlib"]

[features]
mock = []
