[package]
name = "sql-core"
version = "0.1.0"
rust-version.workspace = true
authors = ["Picodata"]
license-file.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { workspace = true }
base64ct = { version = "1.5", features = ["alloc"] }
bincode = "1.3"
blake3 = "1.3"
chrono = { workspace = true }
comfy-table = { workspace = true }
hash32 = "0.2"
itertools = "0.10"
lazy_static = "1.4"
lru = "0.16.0"
pest = "2.0"
pest_derive = "2.0"
rand = { workspace = true }
regex = { workspace = true }
rmp = { workspace = true }
rmp-serde = { workspace = true }
rmpv = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_bytes = { workspace = true }
smol_str = { version = "0.2", features = ["serde"] }
sqlformat = "0.4"
sql-type-system = { path = "../sql-type-system" }
tarantool = { workspace = true }
time = { workspace = true, features = ["parsing", "formatting", "macros"] }
twox-hash = "2.1"
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_yaml = "0.9.34"
insta = "1.42"
tarantool = { workspace = true, features = ["standalone_decimal"] }

[lib]
name = "sql"
crate-type = ["cdylib", "rlib"]

[features]
mock = []
