[package]
name = "sql-planner"
version = "0.1.0"
rust-version.workspace = true
authors = ["Picodata"]
license-file.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sql-executor = { path = "../sql-executor" }
sql-frontend = { path = "../sql-frontend" }
sql-ir = { path = "../sql-ir" }
smol_str = { workspace = true }
tarantool = { workspace = true, features = ["extra_impls"] }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
pretty_assertions = { workspace = true }
rand = { workspace = true }
smol_str = { workspace = true }
tarantool = { workspace = true, features = ["standalone_decimal","extra_impls"] }
# Self-referential dev-dependency: forces the `mock` feature on for the
# whitebox test suite in tests/ without affecting downstream builds.
sql-planner = { path = ".", features = ["mock"] }

[lib]
name = "sql"

[features]
mock = ["sql-ir/mock", "sql-executor/mock", "sql-frontend/mock"]
