[package]
name = "perf"
version = "0.1.0"
rust-version = "1.85"
authors = ["Picodata"]
license-file = "../../LICENSE"
edition = "2021"

[dependencies]
bincode = "1.3"
pest = "2.0"
pest_derive = "2.0"
picodata = { path = "../..", version = "25" }
postgres-types = { version = "0.2", features = [
  "array-impls",
  "with-serde_json-1",
  "with-time-0_3",
  "with-uuid-0_8",
] }
sql-core = { path = "../../sql-planner", version = "0.1" }

[dev-dependencies]
clap = { version = "4", features = ["default"] }
criterion = "0.7"
rand = "0.9"

[[bench]]
name = "perf"
harness = false
