[package]
name = "perf"
version = "0.1.0"
rust-version.workspace = true
authors = ["Picodata"]
license-file.workspace = true
edition.workspace = true

[dependencies]
bincode = "1.3"
pest = "2.0"
pest_derive = "2.0"
picodata = { path = "../.." }
postgres-types = { workspace = true }
sql-core = { path = "../../sql-planner" }

[dev-dependencies]
clap = { workspace = true }
criterion = "0.7"
rand = { workspace = true }

[[bench]]
name = "perf"
harness = false
