[package]
name = "gostech-audit-log"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gostech-audit-log"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115" }
chrono = { version = "0.4" }
reqwest = { version = "0.12.2", features = ["json"] }
clap = { version = "4.4.11", features = ["derive"] }
thiserror = { version = "1.0.58" }
log = { version = "0.4.21" }
simple_logger = { version = "4.3.3" }
hyper = { version = "0.14", default-features = false, features = [
    "tcp",
    "stream",
    "http1",
    "http2",
    "client",
    "server",
    "runtime",
] }
http = { version = "0.2.9" }
prctl = { version = "1.0.0" }
libc = { version = "0.2.153" }
