[package]
name = "gostech-audit-log"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true

[[bin]]
name = "gostech-audit-log"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12.3", features = ["json", "native-tls"] }
clap = { workspace = true, features = ["derive"]}
thiserror = { workspace = true }
log = { version = "0.4.21" }
simple_logger = { version = "4.3.3" }

[dev-dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { workspace = true }
