[package]
name = "gostech-metrics"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
rusty_tarantool = { version = "0.3.0" }
actix-web = { version = "4.0" }
clap = { version = "4.4.11", features = ["derive"] }
bytes = { version = "1.1" }
rmpv = { version = "=1.0.0", features = ["with-serde"] }
