[package]
name = "sbroad-cartridge"
version = "0.1.0"
rust-version = "1.85"
authors = [
    "Picodata"
]
license-file = "../LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = { version = "1.5", features = ["alloc"] }
bincode = "1.3"
blake3 = "1.3"
sbroad-core = { path = "../sbroad-core", version = "0.1" }
serde = { version = "1.0", features = ["derive", "rc"] }
rand = "0.8"
rmp = "0.8"
rmp-serde = "1.3"
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
yaml-rust2 = "0.10"
anyhow = "1"
smol_str = "0.2.1"

[dependencies.tarantool]
git = "https://git.picodata.io/picodata/picodata/tarantool-module.git"
version = ">=4.0"
features = ["picodata"]


[dev-dependencies]
pretty_assertions = "1.3"
serde_yaml = "0.9.34"

[lib]
name = "sbroad_cartridge"
crate-type = ["cdylib", "rlib"]

[features]
mock = ["sbroad-core/mock"]
