[package]
authors = ["Georgy Moshkin <gmoshkin@picodata.io>"]
name = "tarantool-proc"
description = "Tarantool proc macros"
version = "4.1.0"
edition = "2021"
license = "BSD-2-Clause"
documentation = "https://docs.rs/tarantool-proc/"
repository = "https://github.com/picodata/picodata"
rust-version = "1.89"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0", features = ["full", "extra-traits"] }
quote = "^1.0"
proc-macro2 = "1"
darling = "0.14.2"
proc-macro-error2 = "2"

[features]
stored_procs_slice = []
