[package]
name = "plug_wrong_version"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
picodata-plugin = { path = "../../picodata-plugin", features = [
    "test_wrong_version",
] }
serde = { version = "1.0.197", features = ["derive"] }
